Selector at the top for selecting languages for translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,5 +2,8 @@
   "@@locale": "en",
 
   "overview": "Overview",
-  "addWord": "Add Word"
+  "addWord": "Add Word",
+
+  "english": "English",
+  "hindi": "Hindi"
 }
