--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,5 +5,12 @@
   "addWord": "Add Word",
 
   "english": "English",
-  "hindi": "Hindi"
+  "hindi": "Hindi",
+
+  "newWord": "New word",
+  "export": "Export to Anki",
+
+  "deleteConfirmation" : "Do you want to delete '${word}'?",
+  "yes": "Yes",
+  "no": "No"
 }
