Add word page created with basic functions

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -10,7 +10,11 @@
   "newWord": "New word",
   "export": "Export to Anki",
 
-  "deleteConfirmation" : "Do you want to delete '${word}'?",
+  "deleteConfirmation" : "Do you want to delete '{word}'?",
   "yes": "Yes",
-  "no": "No"
+  "no": "No",
+
+  "editWord": "Edit '{word}'",
+  "enterWord": "Enter new word",
+  "saveWord": "Save"
 }
