Added ability to add custom translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -16,5 +16,6 @@
 
   "editWord": "Edit '{word}'",
   "enterWord": "Enter new word",
+  "customTranslation": "Custom translations (new line for each)",
   "saveWord": "Save"
 }
