Adding and editing words working, getting data from Google

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,6 +6,9 @@
 
   "english": "English",
   "hindi": "Hindi",
+  "german": "German",
+  "russish": "Russish",
+  "cantoneese": "Cantoneese",
 
   "newWord": "New word",
   "export": "Export to Anki",
