--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "en",
 
-  "overview": "Overview",
+  "overview": "Overview ({count} words)",
   "addWord": "Add Word",
 
   "english": "English",
