Download sound file from Google text to speech

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -12,6 +12,7 @@
 
   "newWord": "New word",
   "export": "Export to Anki",
+  "existed": "Word existed already",
 
   "edit" : "Edit",
   "delete" : "Delete",
