Separate button for suggestions and few other improvements

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -22,6 +22,7 @@
 
   "editWord": "Edit '{word}'",
   "enterWord": "Enter new word",
+  "getWord": "Suggestions",
   "customTranslation": "Custom translations (new line for each)",
   "saveWord": "Save"
 }
